--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - TZ=Europe/Rome
+      - ROOT_PATH=/pasty
+      - ALT_STATIC_PREFIX=/pasty
     healthcheck:
       test: ["CMD", "curl", "-f", "http://127.0.0.1:8001/"]
       interval: 30s
